[fix] cafeDetails, sidebar 	- cafeDetails 부분의 css 수정 	- sidebar의 z-index 부분 수정

--- a/src/main/webapp/static/css/cafeDetails.css
+++ b/src/main/webapp/static/css/cafeDetails.css
@@ -106,47 +106,50 @@ main {
 }
 
 
-
 .menu-images-wrapper {
-	position: relative;
-	overflow: hidden;
-	margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    margin: 0 auto;
+    width: 70%; /* 화면에 보일 이미지 너비에 맞춰 조정 */
+    max-width: 1000px;
 }
 
 .menu-images {
-	display: flex;
-	transition: transform 0.5s ease-in-out;
+    display: flex;
+    transition: transform 0.5s ease-in-out;
 }
 
 .menu-item {
-	width: 150px; /* 원하는 이미지 너비 */
-	height: 150px; /* 원하는 이미지 높이 */
-	margin: 10px;
-	background-color: #f0f0f0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 18px;
-	color: #0000ff;
-	opacity: 1;
-	transition: opacity 0.5s ease-in-out;
+    width: 150px;
+    height: 150px;
+    margin: 10px;
+    background-color: #f0f0f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    color: #0000ff;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .menu-item.fade-out {
-	opacity: 0.2; /* 희미하게 처리 */
-	transition: opacity 0.5s ease-in-out; /* 부드러운 전환 효과 */
+    opacity: 0.2; /* 희미하게 처리 */
+    transition: opacity 0.5s ease-in-out;
 }
 
 .btn-more-images {
-	right: 0;
-	top: 50%;
-	transform: translateY(-50%);
-	background-color: #ff69b4;
-	color: white;
-	padding: 10px;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
+	 position: absolute;
+    bottom: 10px; /* 이미지의 하단에서 약간 띄우기 */
+    left: 50%; /* 왼쪽에서 50% 지점으로 배치 */
+    transform: translateX(-50%); /* 가운데로 완전히 정렬 */
+    background-color: #ff69b4;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 10; /* 이미지 위에 표시되도록 설정 */
 }
 
 .store-details {
